force-app/main/default/objects/Contact_Studies__c/Contact_Studies__c.object-meta.xml
<CustomObject>
    <label>Contact Studies</label>
    <nameField>
        <displayFormat>STUDY-{000}</displayFormat>
        <label>Contact Studies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>