force-app/main/default/objects/Contact_Studies__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Studies</relationshipLabel>
    <relationshipName>Contact_Studies</relationshipName>
    <type>Lookup</type>
</CustomField>