force-app/main/default/objects/Contact_Studies__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Study</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Study__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Study__c</referenceTo>
    <relationshipLabel>Contact Studies</relationshipLabel>
    <relationshipName>Contact_Studies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>