force-app/main/default/objects/Contact_Studies__c/validationRules/Account_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Contact__r.AccountId  &lt;&gt;  Study__r.Account__c</errorConditionFormula>
    <errorMessage>Please select the correct study that matches the Contact Account.</errorMessage>
</ValidationRule>